[gd_scene load_steps=2 format=3 uid="uid://cb2ot2s3y5m4j"]

[ext_resource type="Script" path="res://scripts/RuleRow.gd" id="1_oivtb"]

[node name="RuleRow" type="HBoxContainer"]
script = ExtResource("1_oivtb")

[node name="SymbolTextEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Symbol"

[node name="ArrowLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "->"

[node name="RuleTextEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Rule"

[node name="RemoveButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Remove"
